samples/_failures_safe/1761170231_82ffa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da5005c4.c: In function ‘main’:
./samples/SAFE/__tmp_da5005c4.c:134:5: error: expected ‘{’ at end of input
  134 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_da5005c4.c:134:5: error: expected declaration or statement at end of input
